--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@swimlane/ngx-charts": "^10.0.0",
     "core-js": "^2.5.4",
+    "d3": "^5.7.0",
     "json-server": "^0.14.0",
     "rxjs": "~6.2.0",
     "rxjs-compat": "^6.3.3",
