--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.5.4",
     "d3": "^5.7.0",
     "json-server": "^0.14.0",
+    "moment": "^2.22.2",
     "rxjs": "~6.2.0",
     "rxjs-compat": "^6.3.3",
     "zone.js": "~0.8.26"
